# AirBnB_clone

./:  7-dump.sql  #1-pack_web_static.py#  #2-do_deploy_web_static.py#  #console.py#  '  .#1-pack_web_static.py  .1-pack_web_static.py.swp  .3-deploy_web_static.py.swp  .7-states_list.html.swp  .AUTHORS.swp  .README.md.swp  .console.py.swb  .console.py.swc  .console.py.swd  .console.py.swe  .console.py.swf  .console.py.swg  .console.py.swh  .console.py.swi  .console.py.swj  .console.py.swk  .console.py.swl  .console.py.swm  .console.py.swn  .console.py.swo  .console.py.swp  .coverage  .env  .evnexample  .file.json.swm  .file.json.swn  .file.json.swo  .file.json.swp  .gitignore  .gitinore  .gitnore  .main_delete.py.swp  .main_place_amenities.py.swp  .new.swp  .pre-commit-config.yaml  (+312 more)
MARCO/: 0-setup_web_static.sh  REAMDE.md
Other_versions_of_py_files/: Task 2_v1.py  test_console_v2.py
Scripts/: activate  activate.bat
__pycache__/: README.md
airbon_venv/: pyvenv.cfg
automations/: generate-authors.sh
console/: help.json  split_class.py  unpack.py
copies/: console.py  file.json
env/: pyvenv.cfg
extras/: main-delete.py  print.py  task2.sh  task3.sh  task4.sh  task5.sh  task6.sh  test.py
first/: _mytest.py  console.py  main_delete.py  setup_mysql_dev.sql  setup_mysql_test.sql  test_console.py
flask/: fls.py
hack/: README.md  generate-authors.sh  generate-license.sh  pypush  w3c_validator.py
jdrafts/: harvest_functions.py
models/: #__init__.py#  #state.py#  .__init.py__.swp  .__init__.py.swk  .__init__.py.swl  .__init__.py.swm  .__init__.py.swn  auto  c  (+54 more)
(+668 files in other folders)
