[tool.poetry]
name = "airbnb_clone_v2"
version = "0.1.0"
description = "The clone of the popular hotel website"
authors = ["Ifiok Ekott <ekottifiok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
